<resources>
    <string name="app_name">UntilDate</string>

    <!-- fragment_notes_list -->

    <string name="dates_list_fragment_title">Your plans</string>
    <string name="empty_dates_list">Added dates will be displayed here</string>

    <plurals name="days">
        <item quantity="zero">%1$d дней</item>
        <item quantity="one">%1$d день</item>
        <item quantity="two">%1$d дня</item>
        <item quantity="few">%1$d дня</item>
        <item quantity="many">%1$d дней</item>
        <item quantity="other">%1$d дней</item>
    </plurals>

    <plurals name="hours">
        <item quantity="zero">%1$d часов</item>
        <item quantity="one">%1$d час</item>
        <item quantity="two">%1$d часа</item>
        <item quantity="few">%1$d часа</item>
        <item quantity="many">%1$d часов</item>
        <item quantity="other">%1$d часов</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

    <plurals name="seconds">
        <item quantity="zero">%1$d секунд</item>
        <item quantity="one">%1$d секунда</item>
        <item quantity="two">%1$d секунды</item>
        <item quantity="few">%1$d секунды</item>
        <item quantity="many">%1$d секунд</item>
        <item quantity="other">%1$d секунд</item>
    </plurals>

    <string name="date_occurred"><![CDATA[The time has come <3]]></string> <!-- &lt; equals less than -->

    <!-- notes_list_fragment_menu -->

    <string name="switch_mode">Switch mode</string>
    <string name="rate">Rate</string>
    <string name="info">Info</string>

    <!-- notes_list_fragment_notifications -->

    <string name="edit_hints">Touch item to edit</string>

    <string name="date_removed">Date removed</string>
    <string name="undo">Undo</string>

    <!-- activity_add_note -->

    <string name="toolbar_add_title">Add</string>
    <string name="title_hint">Date title</string>
    <string name="no_date"> Date not specified</string>
    <string name="change_date">Pick date</string>
    <string name="no_color">Color not specified</string>
    <string name="change_color">Pick color</string>
    <string name="pick_color_title">Pick color</string>
    <string name="save_note">Save</string>

    <string name="warning_no_title">Hey, type a name of date!</string>
    <string name="warning_date_in_past">Hey, you\'re trying to create an event in the past. Think of the future!</string>
    <string name="warning_no_date">Hey, pick a date!</string>

    <!-- activity_edit_note -->

    <string name="toolbar_edit_title">Edit</string>

    <!-- info_dialog -->

    <string name="contacts">Contacts</string>
    <string name="version">Version</string>
    <string name="contact_vk">Vkontakte</string>
    <string name="contact_vk_address">vk.com/try4w</string>
    <string name="contact_skype">Skype</string>
    <string name="contact_skype_login">alexandr2levin</string>
    <string name="contact_telegram">Telegram</string>
    <string name="contact_telegram_id">try4w</string>
    <string name="cancel">Cancel</string>

    <!-- color -->
    <string name="gray">Gray</string>
    <string name="indigo">Indigo</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="brown">Brown</string>
    <string name="orange">Orange</string>

</resources>
